<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="403dp"
        android:layout_height="254dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/notebook" />

    <TextView
        android:id="@+id/textView3"
        style="TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lets let you Login"
        android:textSize="34sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        style="TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter information below"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/button2"
        style="BUTTON"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/login_24dp_fill0_wght400_grad0_opsz24"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.868"
        tools:layout_editor_absoluteX="140dp" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="8sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/lock_24dp_fill0_wght400_grad0_opsz24"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="8sp"

        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/lock_24dp_fill0_wght400_grad0_opsz24"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.491" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="218dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/baseline_supervised_user_circle_24"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.281" />

</androidx.constraintlayout.widget.ConstraintLayout>